# simple_app

./: README.md  compose.yaml
client/: package.json  pnpm-lock.yaml
client/src/: App.vue  style.css
client/src/components/: BarChart.vue  HelloWorld.vue
server/: .gitignore  Cargo.toml  Makefile.toml
server/libs/domain/: Cargo.toml
server/libs/domain/src/: lib.rs
server/libs/domain/src/entities/: mod.rs  sensor_data.rs
server/libs/domain/src/repositories/: mod.rs  sensor_repository.rs
server/libs/domain/src/sensors/: co2.rs  error.rs  humidity.rs  mod.rs  sensor.rs  temperature.rs
server/libs/infrastructure/: Cargo.toml
server/libs/infrastructure/src/persistence/: mod.rs  models.rs  mongo_sensor_repository.rs
server/src/: main.rs
