[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["libs/domain", "libs/repository"]

[workspace.dependencies]
domain = { path = "./libs/domain" }
repository = { path = "./libs/repository"}

anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }

[dependencies]
domain.workspace = true
repository.workspace = true

anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
